# classicGAN

./: .gitignore  Pipfile  README.md  pyproject.toml  remove.py
src/: dataset.py  main.py  models.py  test_weights.py  util.py  wandbTypes.py
